# agentic-employee-management-demo

./: .agentcore.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  DEPLOYMENT.md  Dockerfile  HOOKS_REORGANIZATION.md  INSTALL_HOOK.sh  LICENSE  README.md  article.md  pyproject.toml
app/: agent_entrypoint.py  database.py  main.py
app/agent/: graph.py  llm.py  state.py
app/agent/nodes/: authorize.py  decision.py  execute.py  hitl.py  intent.py
app/api/: agent.py  auth.py  employee.py
app/logging/: audit.py
app/models/: agent_message.py  agent_session.py  employee.py
app/seed/: seed_data.py
employee_agent_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hooks/: README.md
hooks/docs/: all-hooks-summary.md  authorization-changes.md  authorization-summary.md  complete-reference.md  quickstart.md  security-deletions.md  write-capabilities-summary.md  write-capabilities.md
hooks/scripts/: README.md  check_authorization_changes.py  check_security_deletions.py  check_write_capabilities.py  demo.sh  demo_auth_hook.sh  test_auth_hook.py  test_hook.py  test_security_deletions.py
static/: index.html
terraform/: .gitignore  main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  test_agent_auth.py  test_agent_delete.py  test_agent_update.py  test_agent_view.py  test_authorization_rbac.py  test_bedrock.py  test_guardrail.py  test_onboarding_flow.py  utils.py
