[project]
name = "employee-agent-app"
version = "0.1.0"
description = "Workday-like employee management app with a LangGraph-based LLM agent"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "langgraph",
    "python-dotenv",
    "bedrock-agentcore-starter-toolkit>=0.2.8",
    "boto3>=1.42.39",
    # REMOVE: "openai>=1.0.0"  # No longer needed!
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.uv]
# uv will manage the virtual environment and installs

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
